--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,5 +28,4 @@ jobs:
         cache: 'npm'
     - run: |
           npm install
-          CI=''
-    - run: npm run build --if-present
+          CI='' npm run build --if-present
