--- a/nginx.default.conf
+++ b/nginx.default.conf
@@ -7,7 +7,8 @@ server {
     error_page   500 502 503 504  /50x.html;
 
     location / {
-        try_files $uri $uri/ =404;
+        try_files $uri $uri/ /index.html =404;
+        index index.html index.htm;
         add_header Cache-Control "no-cache";
     }
 
