--- a/nginx.default.conf
+++ b/nginx.default.conf
@@ -18,6 +18,10 @@ server {
     }
 
     location /api {
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        rewrite ^/api/(.*)$ /$1 break;
         proxy_pass http://app:8080;
     }
 }
